Backport changes from latest version